# LibBi

./: .gitignore  .project  00-index.md  10-getting-started.md  15-documentation.md  20-examples.md  30-papers.md  30-related.md  40-papers.md  50-mailing-list.md  60-faq.md  70-developers.md  CNAME  Doxyfile  Gemfile  INSTALL.md  INSTALL_GENERIC.md  INSTALL_LINUX.md  INSTALL_MAC.md  INSTALL_WIN.md  LICENSE  MANIFEST  MANIFEST.SKIP  MakeDocs.PL  MakeManifest.PL  Makefile.PL  README.md  README.txt  Test.bi  VERSION.md  index.html  index.md  params.json  test.conf
bi/share/: autogen.sh  bi.lex  bi.yp  configure.ac
bi/share/src/bi/: bi.cpp  bi.hpp  bugs.hpp  init.cpp  init.hpp  refs.hpp  todo.hpp
bi/share/src/testbi/: Test.hpp
bi/share/tt/bi/: action.bi.tt  block.bi.tt  model.bi.tt  var.bi.tt
bi/share/tt/cpp/: dim.hpp.tt  macro.hpp.tt  model.cpp.tt  model.hpp.tt  var.hpp.tt
bi/share/tt/dot/: action.dot.tt  block.dot.tt  model.dot.tt  ref.dot.tt
bi/share/tt/doxyfile/: Doxyfile.tt
bi/share/tt/package/: MANIFEST.tt  Model.bi.tt  VERSION.txt.tt  run.sh.tt
libbi/: .cproject  .project  Doxyfile  Makefile.am  Makefile.pl  README.txt  autogen.sh  bootstrap.sh  config.mk  configure.ac  custom_code_style.xml  custom_code_templates.xml  nvcc_wrapper.pl
libbi/src/bi/: bi.hpp  init.hpp
libbi/src/bi/buffer/: AuxiliaryParticleFilterNetCDFBuffer.cpp  AuxiliaryParticleFilterNetCDFBuffer.hpp  Cache.hpp  Cache1D.hpp  Cache2D.hpp  DenseBlock.hpp  FlexiParticleFilterNetCDFBuffer.cpp  FlexiSimulatorNetCDFBuffer.cpp  KalmanFilterNetCDFBuffer.hpp  Mask.hpp  NetCDFBuffer.cpp  NetCDFBuffer.hpp  OptimiserNetCDFBuffer.cpp  OptimiserNetCDFBuffer.hpp  ParticleFilterNetCDFBuffer.hpp  ParticleMCMCNetCDFBuffer.cpp  ParticleMCMCNetCDFBuffer.hpp  ParticleSmootherNetCDFBuffer.cpp  PdfNetCDFBuffer.hpp  SMC2NetCDFBuffer.hpp  SimulatorCache.hpp  SimulatorNetCDFBuffer.hpp  SparseBlock.hpp  SparseCache.hpp  SparseInputBuffer.cpp  SparseInputBuffer.hpp  SparseInputNetCDFBuffer.cpp  SparseInputNetCDFBuffer.hpp  UnscentedKalmanFilterNetCDFBuffer.cpp  UnscentedKalmanFilterNetCDFBuffer.hpp
libbi/src/bi/cache/: Cache.hpp  Cache1D.hpp  Cache2D.hpp  CacheObject.hpp  CacheVector.hpp  SimulatorCache.hpp
libbi/src/bi/concept/: Markable.hpp  Partitioner.hpp  Resampler.hpp  SimulatorBuffer.hpp  SparseInputBuffer.hpp
libbi/src/bi/cuda/: bind.cuh  constant.cuh  cuda.hpp  device.cu  device.cuh  device.hpp  global.cuh  shared.cuh  shared_commit_visitor.cuh
libbi/src/bi/host/: bind.hpp  const_host.hpp  host.hpp  shared_host_commit_visitor.hpp  shared_host_init_visitor.hpp  sse_const_host.hpp
libbi/src/bi/kd/: FastGaussianKernel.hpp  KDTree.hpp  KDTreeNode.hpp  MedianPartitioner.hpp  kde.hpp
libbi/src/bi/math/: cblas.hpp  clapack.cpp  clapack.hpp  gsl.hpp  io.hpp  loc_matrix.hpp  loc_temp_matrix.hpp  loc_temp_vector.hpp  loc_vector.hpp  locatable.hpp  matrix.hpp  misc.hpp  multi_operation.hpp  ode.hpp  operation.hpp  qrupdate.hpp  scalar.hpp  sim_temp_matrix.hpp  sim_temp_vector.hpp  temp_matrix.hpp  temp_vector.hpp  vector.hpp  view.hpp
libbi/src/bi/method/: AdaptiveNParticleFilter.hpp  AuxiliaryParticleFilter.hpp  ConditionalUnscentedParticleFilter.hpp  ExtendedKalmanFilter.hpp  KernelForwardBackwardSmoother.hpp  KernelResampler.hpp  MetropolisResampler.cpp  MetropolisResampler.hpp  MultinomialResampler.cpp  MultinomialResampler.hpp  NelderMeadOptimiser.hpp  ParticleFilter.hpp  ParticleFilterSmoother.hpp  ParticleMarginalMetropolisHastings.hpp  RauchTungStriebelSmoother.hpp  Resampler.hpp  SMC2.hpp  Simulator.hpp  StratifiedResampler.cpp  StratifiedResampler.hpp  UnscentedRTSSmoother.hpp  misc.hpp
libbi/src/bi/misc/: Markable.hpp  Pipelineable.hpp  aligned_allocator.hpp  device_allocator.hpp  omp.cpp  omp.hpp  pinned_allocator.hpp  pitched_range.hpp  pooled_allocator.hpp  repeated_sequence.hpp  strided_range.hpp
libbi/src/bi/model/: BayesNet.hpp  Coord.cpp  Coord.hpp  Var.hpp  model.hpp
libbi/src/bi/ode/: DOPRI5Stage.hpp  DOPRI5Visitor.hpp  IntegratorConstants.hpp  RK43Integrator.hpp  RK43Stage.hpp  RK4Stage.hpp  RK4Visitor.hpp
libbi/src/bi/pdf/: AdditiveGaussianPdf.hpp  ExpAdditiveGaussianPdf.hpp  ExpGaussianMixturePdf.hpp  ExpGaussianPdf.hpp  FactoredPdf.hpp  GammaPdf.hpp  GaussianPdf.hpp  InverseGammaPdf.hpp  MixturePdf.hpp  UniformPdf.hpp  functor.hpp  misc.hpp
libbi/src/bi/primitive/: aligned_allocator.hpp  cross_pitched_range.hpp  cross_pitched_sequence.hpp  device_allocator.hpp  functor.hpp  matrix_primitive.hpp  pinned_allocator.hpp  pipelined_allocator.hpp  pitched_range.hpp  pooled_allocator.hpp  repeated_range.hpp  repeated_sequence.hpp  strided_range.hpp  strided_sequence.hpp  stuttered_range.hpp  stuttered_sequence.hpp  vector_primitive.hpp
libbi/src/bi/random/: Random.cpp  Random.hpp  Rng.hpp
libbi/src/bi/sse/: sse.hpp  sse_state.hpp
libbi/src/bi/state/: Coord.hpp  SpOx.hpp  State.hpp  Static.hpp  misc.hpp
libbi/src/bi/stopper/: Stopper.hpp  SumOfWeightsStopper.hpp
libbi/src/bi/strategy/: GenericForwardStrategy.hpp  LogNormalLikelihoodStrategy.hpp  NoForwardStrategy.hpp  NoLikelihoodStrategy.hpp  NoStaticStrategy.hpp  ODEForwardStrategy.hpp  ObservationStrategy.hpp  StaticStrategy.hpp
libbi/src/bi/traits/: block_traits.hpp  (+7 more)
libbi/src/testbi/: Test.hpp
share/: .gitignore  bi.l  bi.lex  bi.y  bi.yp  configure.ac  lexer.lpp  nvcc_wrapper.pl  parser.ypp
share/bi/: Gaussian.bi  GenCpp.bi  Operation.bi  RK43.bi  Type.bi
share/docker/: Dockerfile  Dockerfile.gpu
share/emacs/: bi-mode.el
share/src/bi/: bi.cpp  bi.hpp  bugs.hpp  init.hpp  refs.hpp  todo.hpp
share/src/testbi/: Test.hpp
share/tt/bi/: action.bi.tt  block.bi.tt  const.bi.tt  dim.bi.tt  inline.bi.tt  model.bi.tt  var.bi.tt  var_group.bi.tt
share/tt/cpp/: action_coord.hpp.tt  dim.hpp.tt  macro.hpp.tt  model.cpp.tt  model.hpp.tt  var.hpp.tt  var_coord.hpp.tt  var_group.hpp.tt
share/tt/dot/: action.dot.tt  block.dot.tt  model.dot.tt  var.dot.tt
share/tt/doxyfile/: Doxyfile.tt
share/tt/package/: MANIFEST.tt  META.tt  META.yml.tt  Model.bi.tt  README.md.tt  README.tt  VERSION.md.tt  init.sh.tt  run.sh.tt
(+2182 files in other folders)
